Added basic image upload mechanism, added auto mapper generatro

--- a/src/main/resources/static/testUpload.html
+++ b/src/main/resources/static/testUpload.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="/serviceV0/upload" method="post" enctype="multipart/form-data">
+<form action="/serviceV0/avatar" method="post" enctype="multipart/form-data">
     <input type="file" name="file" value="请选择上传文件">
     <input type="submit" value="保存">
 </form>
